Project structure reorganized. Implemented inverse and determinant functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,41 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(
         Test
-        test.cpp
-        Sources/LinearAlgebra.cpp
+
+        Headers/Exceptions/InvalidDimensionsException.h
+        Headers/Exceptions/SingularMatrixException.h
         Headers/LinearAlgebra.h
-        Exceptions/InvalidDimensionsException.cpp Exceptions/InvalidDimensionsException.h)
+
+        Sources/Exceptions/InvalidDimensionsException.cpp
+        Sources/Exceptions/SingularMatrixException.cpp
+        Sources/LinearAlgebra.cpp
+
+        test.cpp
+)
 add_library(
         LinearAlgebra
+
         STATIC
-        Sources/LinearAlgebra.cpp
+
+        Headers/Exceptions/InvalidDimensionsException.h
+        Headers/Exceptions/SingularMatrixException.h
         Headers/LinearAlgebra.h
-        Exceptions/InvalidDimensionsException.cpp Exceptions/InvalidDimensionsException.h)
+
+        Sources/Exceptions/InvalidDimensionsException.cpp
+        Sources/Exceptions/SingularMatrixException.cpp
+        Sources/LinearAlgebra.cpp
+)
 target_include_directories(
         Test
+
         PRIVATE
+
+        Headers
+)
+target_include_directories(
+        LinearAlgebra
+
+        PRIVATE
+
         Headers
 )
