Completed unit testing for all functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@ include(FetchContent)
 
 FetchContent_Declare(
         googletest
-        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+        URL
+        https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
 )
 # For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
@@ -23,9 +24,11 @@ add_executable(
         Headers/LinearAlgebra.h
         Headers/Exceptions/InvalidDimensionsException.h
         Headers/Exceptions/SingularMatrixException.h
+
         Sources/LinearAlgebra.cpp
         Sources/Exceptions/InvalidDimensionsException.cpp
         Sources/Exceptions/SingularMatrixException.cpp
+
         Tests/AddTest.cpp
         Tests/ScalarTest.cpp
         Tests/SubtractTest.cpp
@@ -33,6 +36,10 @@ add_executable(
         Tests/IdentityTest.cpp
         Tests/RowTest.cpp
         Tests/ColumnTest.cpp
+        Tests/MultiplyTest.cpp
+        Tests/TransposeTest.cpp
+        Tests/DeterminantTest.cpp
+        Tests/InverseTest.cpp
 )
 target_include_directories(
         LinearAlgebraTest
@@ -49,45 +56,3 @@ target_link_libraries(
 include(GoogleTest)
 
 gtest_discover_tests(LinearAlgebraTest)
-
-#add_executable(
-#        Test
-#
-#        Headers/Exceptions/InvalidDimensionsException.h
-#        Headers/Exceptions/SingularMatrixException.h
-#        Headers/LinearAlgebra.h
-#
-#        Sources/Exceptions/InvalidDimensionsException.cpp
-#        Sources/Exceptions/SingularMatrixException.cpp
-#        Sources/LinearAlgebra.cpp
-#
-#        main.cpp
-#        hello_test.cpp
-#)
-#add_library(
-#        LinearAlgebra
-#
-#        STATIC
-#
-#        Headers/Exceptions/InvalidDimensionsException.h
-#        Headers/Exceptions/SingularMatrixException.h
-#        Headers/LinearAlgebra.h
-#
-#        Sources/Exceptions/InvalidDimensionsException.cpp
-#        Sources/Exceptions/SingularMatrixException.cpp
-#        Sources/LinearAlgebra.cpp
-#)
-#target_include_directories(
-#        Test
-#
-#        PRIVATE
-#
-#        Headers
-#)
-#target_include_directories(
-#        LinearAlgebra
-#
-#        PRIVATE
-#
-#        Headers
-#)
